--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
+html, body {
+  width: 100vw;
+  height: 100vh;
+}
+.App{
   pointer-events: none;
+  position: fixed;
+  height: 100vh;
+  font-family:Arial, Helvetica, sans-serif;
+  width: 100vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  overflow: scroll;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.invisible{
+  display: flex;
+  flex-wrap: wrap;
+    justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  /* pointer-events: none; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bg{
+  -moz-filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg%27%3E<filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
+  -o-filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg%27%3E<filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
+  -webkit-filter: grayscale(100%);
+  filter: gray;
+  filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg%27%3E<filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
+}
+
+
+
+
+
+.card-view{
+  cursor: pointer;
+  /* opacity: 70%; */
+  color: white;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-width: 240px;
+  filter: grayscale(100%);
+  min-height: 100px;
+  max-width: 200px;
+  width: 200px;
+  height: 200px;
+  margin: 20px 25px 20px 25px;
+  padding: 10px 10px;
+  text-align: center;
+  border-radius: 7px;
+  text-align: center;
+  transition: 0.5s;
 }
 
-.App-link {
-  color: #61dafb;
+
+.card-view:hover{
+  opacity: 150%;
+  filter: grayscale(0%);
+-webkit-box-shadow: -1px -1px 56px -9px rgba(0, 0, 0, 0.733);
+-moz-box-shadow: -1px -1px 56px -9px rgba(0,0,0,0.75);
+box-shadow: -1px -1px 56px -9px rgba(0,0,0,0.75);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
